# deep-gw-cnv

./: .gitignore  CLAUDE.md  README.md  TIMELINE.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: check-reply.md  propose-experiment.md
assets/: README.md  core-genome.bed  core-genome.interval_list
configs/: README.md  base.yaml
configs/experiments/: exp_001_baseline.yaml
data/: README.md
data/setup/: 01_extract_readcounts.sh  02_readcounts_to_zarr.sh  03_readcounts_to_npy.sh  100bp_to_400bp_core.py  genome_overview.ipynb  readcounts_to_npy.py  readcounts_to_zarr.py
datasets/: README.md
diagnostics/: app.py
diagnostics/src/: page1.py  page2.py  page_monitor.py  utils.py
experiments/: README.md
experiments/exp_001_baseline/: README.md
models/: README.md  log.e  main.py  run.sh  train.py
models/architectures/: 01_conv_vae.py  02_conv_vae.py  03_conv_vae.py  04_conv_vae.py  05_conv_vae.py  06_conv_vae.py  __init__.py  conv_vae.py
models/cnv/: 01_gene_cnv_caller.py  02_gene_cnv_caller.py  03_gene_cnv_caller.py  04_gene_cnv_caller.py  05_gene_cnv_caller.py  06_genome_cnv_caller.py  07_genome_cnv_caller.py  08_genome_cnv_caller.py  09_genome_cnv_caller.py  10_genome_cnv_caller.py  11_genome_cnv_caller.py  __init__.py
models/evaluation/: 01_pf9_evaluation.py  02_pf9_evaluation.py  03_pf9_evaluation.py  __init__.py
models/experiments/: README.md
models/hmm/: 01_gaussian_hmm.py  (+3 more)
notebooks/: README.md
scripts/: README.md  evaluate.py  monitor.py  monitor.sh  predict.py  preprocess.py  train.py
setup/: 01_extract_readcounts.sh  02_readcounts_to_zarr.ipynb  02_readcounts_to_zarr.sh  03_readcounts_to_npy.sh  main.nf  nextflow.config  readcounts_to_npy.py  readcounts_to_zarr.py
tools/: .last_proposal_msgid  .proposal_body.txt  check_and_run.sh  check_reply.py  install_daemon.sh  send_email.py
(+105 files in other folders)
